# SmartCue

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: ai_assistant_mcp.py  calendar_mcp.py  github_mcp.py  init_db.sql  main.py  postgres_mcp.py
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/components/: Aiassistant.js  Dashboard.js  Meetings.js
